<resources>
    <string name="app_name">Random Number Generator</string>
    <string name="tab_text_1">Number</string>
    <string name="tab_text_2">List</string>
    <string name="tab_text_3">Dice</string>
    <string name="action_settings">Settings</string>
    <string name="add_list_item_hint">Enter a list item</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="zero">0</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="random">RANDOM</string>
    <string name="remove_ads">Remove ads</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="themes">
        <item>Default</item>
        <item>Dark</item>
        <item>Red/Green</item>
        <item>Orange/Light Blue</item>
        <item>Red/Blue</item>
    </string-array>
</resources>
